# neuron_digits

./: CMakeLists.txt  weights256.txt
headers/: BitMap.hpp  IRenderable.hpp  Matrix.hpp  NeuroNet.hpp  RenderWindow.hpp
headers/activators/: IActivatorFunc.hpp  ModReluFunc.hpp  SigmoidFunc.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: MatrixTest.cpp  main.cpp
